// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a Pocket PagerDuty for critical and non-critical actions 1`] = `
"{
  \\"data\\": {
    \\"pagerduty_vendor\\": {
      \\"test-pagerduty_cloudwatch_8824B7B3\\": {
        \\"name\\": \\"Cloudwatch\\"
      },
      \\"test-pagerduty_sentry_896D6C2C\\": {
        \\"name\\": \\"Sentry\\"
      }
    }
  },
  \\"resource\\": {
    \\"aws_sns_topic\\": {
      \\"test-pagerduty_alarm-critical-topic_5B8FEE8D\\": {
        \\"name\\": \\"Test-Env-Infrastructure-Alarm-Critical\\"
      },
      \\"test-pagerduty_alarm-non-critical-topic_3FD65796\\": {
        \\"name\\": \\"Test-Env-Infrastructure-Alarm-Non-Critical\\"
      }
    },
    \\"aws_sns_topic_subscription\\": {
      \\"test-pagerduty_alarm-critical-subscription_ABC78F4F\\": {
        \\"confirmation_timeout_in_minutes\\": 2,
        \\"depends_on\\": [
          \\"aws_sns_topic.test-pagerduty_alarm-critical-topic_5B8FEE8D\\",
          \\"pagerduty_service_integration.test-pagerduty_TfTokenTOKEN8-critical_11EE8FE2\\"
        ],
        \\"endpoint\\": \\"https://events.pagerduty.com/integration/\${pagerduty_service_integration.test-pagerduty_TfTokenTOKEN8-critical_11EE8FE2.integration_key}/enqueue\\",
        \\"endpoint_auto_confirms\\": true,
        \\"protocol\\": \\"https\\",
        \\"topic_arn\\": \\"\${aws_sns_topic.test-pagerduty_alarm-critical-topic_5B8FEE8D.arn}\\"
      },
      \\"test-pagerduty_alarm-non-critical-subscription_D80993D9\\": {
        \\"confirmation_timeout_in_minutes\\": 2,
        \\"depends_on\\": [
          \\"aws_sns_topic.test-pagerduty_alarm-non-critical-topic_3FD65796\\",
          \\"pagerduty_service_integration.test-pagerduty_TfTokenTOKEN12-non-critical_716C3E7E\\"
        ],
        \\"endpoint\\": \\"https://events.pagerduty.com/integration/\${pagerduty_service_integration.test-pagerduty_TfTokenTOKEN12-non-critical_716C3E7E.integration_key}/enqueue\\",
        \\"endpoint_auto_confirms\\": true,
        \\"protocol\\": \\"https\\",
        \\"topic_arn\\": \\"\${aws_sns_topic.test-pagerduty_alarm-non-critical-topic_3FD65796.arn}\\"
      }
    },
    \\"pagerduty_service\\": {
      \\"test-pagerduty_pagerduty-critical_3EB714BD\\": {
        \\"acknowledgement_timeout\\": \\"600\\",
        \\"alert_creation\\": \\"create_incidents\\",
        \\"auto_resolve_timeout\\": \\"14400\\",
        \\"description\\": \\"PagerDuty Critical\\",
        \\"escalation_policy\\": \\"critical-id\\",
        \\"incident_urgency_rule\\": {
          \\"type\\": \\"constant\\",
          \\"urgency\\": \\"high\\"
        },
        \\"name\\": \\"Test-Env-PagerDuty-Critical\\"
      },
      \\"test-pagerduty_pagerduty-non-critical_BBC21A2B\\": {
        \\"acknowledgement_timeout\\": \\"600\\",
        \\"alert_creation\\": \\"create_incidents\\",
        \\"auto_resolve_timeout\\": \\"14400\\",
        \\"description\\": \\"PagerDuty Non-Critical\\",
        \\"escalation_policy\\": \\"non-critical-id\\",
        \\"incident_urgency_rule\\": {
          \\"type\\": \\"constant\\",
          \\"urgency\\": \\"low\\"
        },
        \\"name\\": \\"Test-Env-PagerDuty-Non-Critical\\"
      }
    },
    \\"pagerduty_service_integration\\": {
      \\"test-pagerduty_TfTokenTOKEN0-critical_FC834D65\\": {
        \\"depends_on\\": [
          \\"pagerduty_service.test-pagerduty_pagerduty-critical_3EB714BD\\"
        ],
        \\"name\\": \\"\${data.pagerduty_vendor.test-pagerduty_sentry_896D6C2C.name}\\",
        \\"service\\": \\"\${pagerduty_service.test-pagerduty_pagerduty-critical_3EB714BD.id}\\",
        \\"vendor\\": \\"\${data.pagerduty_vendor.test-pagerduty_sentry_896D6C2C.id}\\"
      },
      \\"test-pagerduty_TfTokenTOKEN12-non-critical_716C3E7E\\": {
        \\"depends_on\\": [
          \\"pagerduty_service.test-pagerduty_pagerduty-non-critical_BBC21A2B\\"
        ],
        \\"name\\": \\"\${data.pagerduty_vendor.test-pagerduty_cloudwatch_8824B7B3.name}\\",
        \\"service\\": \\"\${pagerduty_service.test-pagerduty_pagerduty-non-critical_BBC21A2B.id}\\",
        \\"vendor\\": \\"\${data.pagerduty_vendor.test-pagerduty_cloudwatch_8824B7B3.id}\\"
      },
      \\"test-pagerduty_TfTokenTOKEN4-non-critical_36E5DB74\\": {
        \\"depends_on\\": [
          \\"pagerduty_service.test-pagerduty_pagerduty-non-critical_BBC21A2B\\"
        ],
        \\"name\\": \\"\${data.pagerduty_vendor.test-pagerduty_sentry_896D6C2C.name}\\",
        \\"service\\": \\"\${pagerduty_service.test-pagerduty_pagerduty-non-critical_BBC21A2B.id}\\",
        \\"vendor\\": \\"\${data.pagerduty_vendor.test-pagerduty_sentry_896D6C2C.id}\\"
      },
      \\"test-pagerduty_TfTokenTOKEN8-critical_11EE8FE2\\": {
        \\"depends_on\\": [
          \\"pagerduty_service.test-pagerduty_pagerduty-critical_3EB714BD\\"
        ],
        \\"name\\": \\"\${data.pagerduty_vendor.test-pagerduty_cloudwatch_8824B7B3.name}\\",
        \\"service\\": \\"\${pagerduty_service.test-pagerduty_pagerduty-critical_3EB714BD.id}\\",
        \\"vendor\\": \\"\${data.pagerduty_vendor.test-pagerduty_cloudwatch_8824B7B3.id}\\"
      }
    }
  }
}"
`;

exports[`renders a Pocket PagerDuty with custom acknowledgement timeout 1`] = `
"{
  \\"data\\": {
    \\"pagerduty_vendor\\": {
      \\"test-pagerduty_cloudwatch_8824B7B3\\": {
        \\"name\\": \\"Cloudwatch\\"
      },
      \\"test-pagerduty_sentry_896D6C2C\\": {
        \\"name\\": \\"Sentry\\"
      }
    }
  },
  \\"resource\\": {
    \\"aws_sns_topic\\": {
      \\"test-pagerduty_alarm-critical-topic_5B8FEE8D\\": {
        \\"name\\": \\"Test-Env-Infrastructure-Alarm-Critical\\"
      },
      \\"test-pagerduty_alarm-non-critical-topic_3FD65796\\": {
        \\"name\\": \\"Test-Env-Infrastructure-Alarm-Non-Critical\\"
      }
    },
    \\"aws_sns_topic_subscription\\": {
      \\"test-pagerduty_alarm-critical-subscription_ABC78F4F\\": {
        \\"confirmation_timeout_in_minutes\\": 2,
        \\"depends_on\\": [
          \\"aws_sns_topic.test-pagerduty_alarm-critical-topic_5B8FEE8D\\",
          \\"pagerduty_service_integration.test-pagerduty_TfTokenTOKEN48-critical_0240ED75\\"
        ],
        \\"endpoint\\": \\"https://events.pagerduty.com/integration/\${pagerduty_service_integration.test-pagerduty_TfTokenTOKEN48-critical_0240ED75.integration_key}/enqueue\\",
        \\"endpoint_auto_confirms\\": true,
        \\"protocol\\": \\"https\\",
        \\"topic_arn\\": \\"\${aws_sns_topic.test-pagerduty_alarm-critical-topic_5B8FEE8D.arn}\\"
      },
      \\"test-pagerduty_alarm-non-critical-subscription_D80993D9\\": {
        \\"confirmation_timeout_in_minutes\\": 2,
        \\"depends_on\\": [
          \\"aws_sns_topic.test-pagerduty_alarm-non-critical-topic_3FD65796\\",
          \\"pagerduty_service_integration.test-pagerduty_TfTokenTOKEN52-non-critical_CB81C28E\\"
        ],
        \\"endpoint\\": \\"https://events.pagerduty.com/integration/\${pagerduty_service_integration.test-pagerduty_TfTokenTOKEN52-non-critical_CB81C28E.integration_key}/enqueue\\",
        \\"endpoint_auto_confirms\\": true,
        \\"protocol\\": \\"https\\",
        \\"topic_arn\\": \\"\${aws_sns_topic.test-pagerduty_alarm-non-critical-topic_3FD65796.arn}\\"
      }
    },
    \\"pagerduty_service\\": {
      \\"test-pagerduty_pagerduty-critical_3EB714BD\\": {
        \\"acknowledgement_timeout\\": \\"100\\",
        \\"alert_creation\\": \\"create_incidents\\",
        \\"auto_resolve_timeout\\": \\"14400\\",
        \\"description\\": \\"PagerDuty Critical\\",
        \\"escalation_policy\\": \\"critical-id\\",
        \\"incident_urgency_rule\\": {
          \\"type\\": \\"constant\\",
          \\"urgency\\": \\"high\\"
        },
        \\"name\\": \\"Test-Env-PagerDuty-Critical\\"
      },
      \\"test-pagerduty_pagerduty-non-critical_BBC21A2B\\": {
        \\"acknowledgement_timeout\\": \\"100\\",
        \\"alert_creation\\": \\"create_incidents\\",
        \\"auto_resolve_timeout\\": \\"14400\\",
        \\"description\\": \\"PagerDuty Non-Critical\\",
        \\"escalation_policy\\": \\"non-critical-id\\",
        \\"incident_urgency_rule\\": {
          \\"type\\": \\"constant\\",
          \\"urgency\\": \\"low\\"
        },
        \\"name\\": \\"Test-Env-PagerDuty-Non-Critical\\"
      }
    },
    \\"pagerduty_service_integration\\": {
      \\"test-pagerduty_TfTokenTOKEN40-critical_A67CB86A\\": {
        \\"depends_on\\": [
          \\"pagerduty_service.test-pagerduty_pagerduty-critical_3EB714BD\\"
        ],
        \\"name\\": \\"\${data.pagerduty_vendor.test-pagerduty_sentry_896D6C2C.name}\\",
        \\"service\\": \\"\${pagerduty_service.test-pagerduty_pagerduty-critical_3EB714BD.id}\\",
        \\"vendor\\": \\"\${data.pagerduty_vendor.test-pagerduty_sentry_896D6C2C.id}\\"
      },
      \\"test-pagerduty_TfTokenTOKEN44-non-critical_AD8D6023\\": {
        \\"depends_on\\": [
          \\"pagerduty_service.test-pagerduty_pagerduty-non-critical_BBC21A2B\\"
        ],
        \\"name\\": \\"\${data.pagerduty_vendor.test-pagerduty_sentry_896D6C2C.name}\\",
        \\"service\\": \\"\${pagerduty_service.test-pagerduty_pagerduty-non-critical_BBC21A2B.id}\\",
        \\"vendor\\": \\"\${data.pagerduty_vendor.test-pagerduty_sentry_896D6C2C.id}\\"
      },
      \\"test-pagerduty_TfTokenTOKEN48-critical_0240ED75\\": {
        \\"depends_on\\": [
          \\"pagerduty_service.test-pagerduty_pagerduty-critical_3EB714BD\\"
        ],
        \\"name\\": \\"\${data.pagerduty_vendor.test-pagerduty_cloudwatch_8824B7B3.name}\\",
        \\"service\\": \\"\${pagerduty_service.test-pagerduty_pagerduty-critical_3EB714BD.id}\\",
        \\"vendor\\": \\"\${data.pagerduty_vendor.test-pagerduty_cloudwatch_8824B7B3.id}\\"
      },
      \\"test-pagerduty_TfTokenTOKEN52-non-critical_CB81C28E\\": {
        \\"depends_on\\": [
          \\"pagerduty_service.test-pagerduty_pagerduty-non-critical_BBC21A2B\\"
        ],
        \\"name\\": \\"\${data.pagerduty_vendor.test-pagerduty_cloudwatch_8824B7B3.name}\\",
        \\"service\\": \\"\${pagerduty_service.test-pagerduty_pagerduty-non-critical_BBC21A2B.id}\\",
        \\"vendor\\": \\"\${data.pagerduty_vendor.test-pagerduty_cloudwatch_8824B7B3.id}\\"
      }
    }
  }
}"
`;

exports[`renders a Pocket PagerDuty with custom auto resolve timeout 1`] = `
"{
  \\"data\\": {
    \\"pagerduty_vendor\\": {
      \\"test-pagerduty_cloudwatch_8824B7B3\\": {
        \\"name\\": \\"Cloudwatch\\"
      },
      \\"test-pagerduty_sentry_896D6C2C\\": {
        \\"name\\": \\"Sentry\\"
      }
    }
  },
  \\"resource\\": {
    \\"aws_sns_topic\\": {
      \\"test-pagerduty_alarm-critical-topic_5B8FEE8D\\": {
        \\"name\\": \\"Test-Env-Infrastructure-Alarm-Critical\\"
      },
      \\"test-pagerduty_alarm-non-critical-topic_3FD65796\\": {
        \\"name\\": \\"Test-Env-Infrastructure-Alarm-Non-Critical\\"
      }
    },
    \\"aws_sns_topic_subscription\\": {
      \\"test-pagerduty_alarm-critical-subscription_ABC78F4F\\": {
        \\"confirmation_timeout_in_minutes\\": 2,
        \\"depends_on\\": [
          \\"aws_sns_topic.test-pagerduty_alarm-critical-topic_5B8FEE8D\\",
          \\"pagerduty_service_integration.test-pagerduty_TfTokenTOKEN28-critical_95D956AB\\"
        ],
        \\"endpoint\\": \\"https://events.pagerduty.com/integration/\${pagerduty_service_integration.test-pagerduty_TfTokenTOKEN28-critical_95D956AB.integration_key}/enqueue\\",
        \\"endpoint_auto_confirms\\": true,
        \\"protocol\\": \\"https\\",
        \\"topic_arn\\": \\"\${aws_sns_topic.test-pagerduty_alarm-critical-topic_5B8FEE8D.arn}\\"
      },
      \\"test-pagerduty_alarm-non-critical-subscription_D80993D9\\": {
        \\"confirmation_timeout_in_minutes\\": 2,
        \\"depends_on\\": [
          \\"aws_sns_topic.test-pagerduty_alarm-non-critical-topic_3FD65796\\",
          \\"pagerduty_service_integration.test-pagerduty_TfTokenTOKEN32-non-critical_B74AED62\\"
        ],
        \\"endpoint\\": \\"https://events.pagerduty.com/integration/\${pagerduty_service_integration.test-pagerduty_TfTokenTOKEN32-non-critical_B74AED62.integration_key}/enqueue\\",
        \\"endpoint_auto_confirms\\": true,
        \\"protocol\\": \\"https\\",
        \\"topic_arn\\": \\"\${aws_sns_topic.test-pagerduty_alarm-non-critical-topic_3FD65796.arn}\\"
      }
    },
    \\"pagerduty_service\\": {
      \\"test-pagerduty_pagerduty-critical_3EB714BD\\": {
        \\"acknowledgement_timeout\\": \\"600\\",
        \\"alert_creation\\": \\"create_incidents\\",
        \\"auto_resolve_timeout\\": \\"4\\",
        \\"description\\": \\"PagerDuty Critical\\",
        \\"escalation_policy\\": \\"critical-id\\",
        \\"incident_urgency_rule\\": {
          \\"type\\": \\"constant\\",
          \\"urgency\\": \\"high\\"
        },
        \\"name\\": \\"Test-Env-PagerDuty-Critical\\"
      },
      \\"test-pagerduty_pagerduty-non-critical_BBC21A2B\\": {
        \\"acknowledgement_timeout\\": \\"600\\",
        \\"alert_creation\\": \\"create_incidents\\",
        \\"auto_resolve_timeout\\": \\"4\\",
        \\"description\\": \\"PagerDuty Non-Critical\\",
        \\"escalation_policy\\": \\"non-critical-id\\",
        \\"incident_urgency_rule\\": {
          \\"type\\": \\"constant\\",
          \\"urgency\\": \\"low\\"
        },
        \\"name\\": \\"Test-Env-PagerDuty-Non-Critical\\"
      }
    },
    \\"pagerduty_service_integration\\": {
      \\"test-pagerduty_TfTokenTOKEN20-critical_A029D360\\": {
        \\"depends_on\\": [
          \\"pagerduty_service.test-pagerduty_pagerduty-critical_3EB714BD\\"
        ],
        \\"name\\": \\"\${data.pagerduty_vendor.test-pagerduty_sentry_896D6C2C.name}\\",
        \\"service\\": \\"\${pagerduty_service.test-pagerduty_pagerduty-critical_3EB714BD.id}\\",
        \\"vendor\\": \\"\${data.pagerduty_vendor.test-pagerduty_sentry_896D6C2C.id}\\"
      },
      \\"test-pagerduty_TfTokenTOKEN24-non-critical_6E2BA767\\": {
        \\"depends_on\\": [
          \\"pagerduty_service.test-pagerduty_pagerduty-non-critical_BBC21A2B\\"
        ],
        \\"name\\": \\"\${data.pagerduty_vendor.test-pagerduty_sentry_896D6C2C.name}\\",
        \\"service\\": \\"\${pagerduty_service.test-pagerduty_pagerduty-non-critical_BBC21A2B.id}\\",
        \\"vendor\\": \\"\${data.pagerduty_vendor.test-pagerduty_sentry_896D6C2C.id}\\"
      },
      \\"test-pagerduty_TfTokenTOKEN28-critical_95D956AB\\": {
        \\"depends_on\\": [
          \\"pagerduty_service.test-pagerduty_pagerduty-critical_3EB714BD\\"
        ],
        \\"name\\": \\"\${data.pagerduty_vendor.test-pagerduty_cloudwatch_8824B7B3.name}\\",
        \\"service\\": \\"\${pagerduty_service.test-pagerduty_pagerduty-critical_3EB714BD.id}\\",
        \\"vendor\\": \\"\${data.pagerduty_vendor.test-pagerduty_cloudwatch_8824B7B3.id}\\"
      },
      \\"test-pagerduty_TfTokenTOKEN32-non-critical_B74AED62\\": {
        \\"depends_on\\": [
          \\"pagerduty_service.test-pagerduty_pagerduty-non-critical_BBC21A2B\\"
        ],
        \\"name\\": \\"\${data.pagerduty_vendor.test-pagerduty_cloudwatch_8824B7B3.name}\\",
        \\"service\\": \\"\${pagerduty_service.test-pagerduty_pagerduty-non-critical_BBC21A2B.id}\\",
        \\"vendor\\": \\"\${data.pagerduty_vendor.test-pagerduty_cloudwatch_8824B7B3.id}\\"
      }
    }
  }
}"
`;

exports[`renders a Pocket PagerDuty with custom sns topic subscription confirmation timeout in minutes 1`] = `
"{
  \\"data\\": {
    \\"pagerduty_vendor\\": {
      \\"test-pagerduty_cloudwatch_8824B7B3\\": {
        \\"name\\": \\"Cloudwatch\\"
      },
      \\"test-pagerduty_sentry_896D6C2C\\": {
        \\"name\\": \\"Sentry\\"
      }
    }
  },
  \\"resource\\": {
    \\"aws_sns_topic\\": {
      \\"test-pagerduty_alarm-critical-topic_5B8FEE8D\\": {
        \\"name\\": \\"Test-Env-Infrastructure-Alarm-Critical\\"
      },
      \\"test-pagerduty_alarm-non-critical-topic_3FD65796\\": {
        \\"name\\": \\"Test-Env-Infrastructure-Alarm-Non-Critical\\"
      }
    },
    \\"aws_sns_topic_subscription\\": {
      \\"test-pagerduty_alarm-critical-subscription_ABC78F4F\\": {
        \\"confirmation_timeout_in_minutes\\": 10,
        \\"depends_on\\": [
          \\"aws_sns_topic.test-pagerduty_alarm-critical-topic_5B8FEE8D\\",
          \\"pagerduty_service_integration.test-pagerduty_TfTokenTOKEN88-critical_E7E99FD5\\"
        ],
        \\"endpoint\\": \\"https://events.pagerduty.com/integration/\${pagerduty_service_integration.test-pagerduty_TfTokenTOKEN88-critical_E7E99FD5.integration_key}/enqueue\\",
        \\"endpoint_auto_confirms\\": true,
        \\"protocol\\": \\"https\\",
        \\"topic_arn\\": \\"\${aws_sns_topic.test-pagerduty_alarm-critical-topic_5B8FEE8D.arn}\\"
      },
      \\"test-pagerduty_alarm-non-critical-subscription_D80993D9\\": {
        \\"confirmation_timeout_in_minutes\\": 10,
        \\"depends_on\\": [
          \\"aws_sns_topic.test-pagerduty_alarm-non-critical-topic_3FD65796\\",
          \\"pagerduty_service_integration.test-pagerduty_TfTokenTOKEN92-non-critical_A5F1D48F\\"
        ],
        \\"endpoint\\": \\"https://events.pagerduty.com/integration/\${pagerduty_service_integration.test-pagerduty_TfTokenTOKEN92-non-critical_A5F1D48F.integration_key}/enqueue\\",
        \\"endpoint_auto_confirms\\": true,
        \\"protocol\\": \\"https\\",
        \\"topic_arn\\": \\"\${aws_sns_topic.test-pagerduty_alarm-non-critical-topic_3FD65796.arn}\\"
      }
    },
    \\"pagerduty_service\\": {
      \\"test-pagerduty_pagerduty-critical_3EB714BD\\": {
        \\"acknowledgement_timeout\\": \\"600\\",
        \\"alert_creation\\": \\"create_incidents\\",
        \\"auto_resolve_timeout\\": \\"14400\\",
        \\"description\\": \\"PagerDuty Critical\\",
        \\"escalation_policy\\": \\"critical-id\\",
        \\"incident_urgency_rule\\": {
          \\"type\\": \\"constant\\",
          \\"urgency\\": \\"high\\"
        },
        \\"name\\": \\"Test-Env-PagerDuty-Critical\\"
      },
      \\"test-pagerduty_pagerduty-non-critical_BBC21A2B\\": {
        \\"acknowledgement_timeout\\": \\"600\\",
        \\"alert_creation\\": \\"create_incidents\\",
        \\"auto_resolve_timeout\\": \\"14400\\",
        \\"description\\": \\"PagerDuty Non-Critical\\",
        \\"escalation_policy\\": \\"non-critical-id\\",
        \\"incident_urgency_rule\\": {
          \\"type\\": \\"constant\\",
          \\"urgency\\": \\"low\\"
        },
        \\"name\\": \\"Test-Env-PagerDuty-Non-Critical\\"
      }
    },
    \\"pagerduty_service_integration\\": {
      \\"test-pagerduty_TfTokenTOKEN80-critical_F7CF2990\\": {
        \\"depends_on\\": [
          \\"pagerduty_service.test-pagerduty_pagerduty-critical_3EB714BD\\"
        ],
        \\"name\\": \\"\${data.pagerduty_vendor.test-pagerduty_sentry_896D6C2C.name}\\",
        \\"service\\": \\"\${pagerduty_service.test-pagerduty_pagerduty-critical_3EB714BD.id}\\",
        \\"vendor\\": \\"\${data.pagerduty_vendor.test-pagerduty_sentry_896D6C2C.id}\\"
      },
      \\"test-pagerduty_TfTokenTOKEN84-non-critical_65C59EF5\\": {
        \\"depends_on\\": [
          \\"pagerduty_service.test-pagerduty_pagerduty-non-critical_BBC21A2B\\"
        ],
        \\"name\\": \\"\${data.pagerduty_vendor.test-pagerduty_sentry_896D6C2C.name}\\",
        \\"service\\": \\"\${pagerduty_service.test-pagerduty_pagerduty-non-critical_BBC21A2B.id}\\",
        \\"vendor\\": \\"\${data.pagerduty_vendor.test-pagerduty_sentry_896D6C2C.id}\\"
      },
      \\"test-pagerduty_TfTokenTOKEN88-critical_E7E99FD5\\": {
        \\"depends_on\\": [
          \\"pagerduty_service.test-pagerduty_pagerduty-critical_3EB714BD\\"
        ],
        \\"name\\": \\"\${data.pagerduty_vendor.test-pagerduty_cloudwatch_8824B7B3.name}\\",
        \\"service\\": \\"\${pagerduty_service.test-pagerduty_pagerduty-critical_3EB714BD.id}\\",
        \\"vendor\\": \\"\${data.pagerduty_vendor.test-pagerduty_cloudwatch_8824B7B3.id}\\"
      },
      \\"test-pagerduty_TfTokenTOKEN92-non-critical_A5F1D48F\\": {
        \\"depends_on\\": [
          \\"pagerduty_service.test-pagerduty_pagerduty-non-critical_BBC21A2B\\"
        ],
        \\"name\\": \\"\${data.pagerduty_vendor.test-pagerduty_cloudwatch_8824B7B3.name}\\",
        \\"service\\": \\"\${pagerduty_service.test-pagerduty_pagerduty-non-critical_BBC21A2B.id}\\",
        \\"vendor\\": \\"\${data.pagerduty_vendor.test-pagerduty_cloudwatch_8824B7B3.id}\\"
      }
    }
  }
}"
`;

exports[`renders a Pocket PagerDuty with sns topic tags 1`] = `
"{
  \\"data\\": {
    \\"pagerduty_vendor\\": {
      \\"test-pagerduty_cloudwatch_8824B7B3\\": {
        \\"name\\": \\"Cloudwatch\\"
      },
      \\"test-pagerduty_sentry_896D6C2C\\": {
        \\"name\\": \\"Sentry\\"
      }
    }
  },
  \\"resource\\": {
    \\"aws_sns_topic\\": {
      \\"test-pagerduty_alarm-critical-topic_5B8FEE8D\\": {
        \\"name\\": \\"Test-Env-Infrastructure-Alarm-Critical\\",
        \\"tags\\": {
          \\"Test\\": \\"Topic\\"
        }
      },
      \\"test-pagerduty_alarm-non-critical-topic_3FD65796\\": {
        \\"name\\": \\"Test-Env-Infrastructure-Alarm-Non-Critical\\",
        \\"tags\\": {
          \\"Test\\": \\"Topic\\"
        }
      }
    },
    \\"aws_sns_topic_subscription\\": {
      \\"test-pagerduty_alarm-critical-subscription_ABC78F4F\\": {
        \\"confirmation_timeout_in_minutes\\": 2,
        \\"depends_on\\": [
          \\"aws_sns_topic.test-pagerduty_alarm-critical-topic_5B8FEE8D\\",
          \\"pagerduty_service_integration.test-pagerduty_TfTokenTOKEN68-critical_2A2BDDE8\\"
        ],
        \\"endpoint\\": \\"https://events.pagerduty.com/integration/\${pagerduty_service_integration.test-pagerduty_TfTokenTOKEN68-critical_2A2BDDE8.integration_key}/enqueue\\",
        \\"endpoint_auto_confirms\\": true,
        \\"protocol\\": \\"https\\",
        \\"topic_arn\\": \\"\${aws_sns_topic.test-pagerduty_alarm-critical-topic_5B8FEE8D.arn}\\"
      },
      \\"test-pagerduty_alarm-non-critical-subscription_D80993D9\\": {
        \\"confirmation_timeout_in_minutes\\": 2,
        \\"depends_on\\": [
          \\"aws_sns_topic.test-pagerduty_alarm-non-critical-topic_3FD65796\\",
          \\"pagerduty_service_integration.test-pagerduty_TfTokenTOKEN72-non-critical_EE9383C7\\"
        ],
        \\"endpoint\\": \\"https://events.pagerduty.com/integration/\${pagerduty_service_integration.test-pagerduty_TfTokenTOKEN72-non-critical_EE9383C7.integration_key}/enqueue\\",
        \\"endpoint_auto_confirms\\": true,
        \\"protocol\\": \\"https\\",
        \\"topic_arn\\": \\"\${aws_sns_topic.test-pagerduty_alarm-non-critical-topic_3FD65796.arn}\\"
      }
    },
    \\"pagerduty_service\\": {
      \\"test-pagerduty_pagerduty-critical_3EB714BD\\": {
        \\"acknowledgement_timeout\\": \\"600\\",
        \\"alert_creation\\": \\"create_incidents\\",
        \\"auto_resolve_timeout\\": \\"14400\\",
        \\"description\\": \\"PagerDuty Critical\\",
        \\"escalation_policy\\": \\"critical-id\\",
        \\"incident_urgency_rule\\": {
          \\"type\\": \\"constant\\",
          \\"urgency\\": \\"high\\"
        },
        \\"name\\": \\"Test-Env-PagerDuty-Critical\\"
      },
      \\"test-pagerduty_pagerduty-non-critical_BBC21A2B\\": {
        \\"acknowledgement_timeout\\": \\"600\\",
        \\"alert_creation\\": \\"create_incidents\\",
        \\"auto_resolve_timeout\\": \\"14400\\",
        \\"description\\": \\"PagerDuty Non-Critical\\",
        \\"escalation_policy\\": \\"non-critical-id\\",
        \\"incident_urgency_rule\\": {
          \\"type\\": \\"constant\\",
          \\"urgency\\": \\"low\\"
        },
        \\"name\\": \\"Test-Env-PagerDuty-Non-Critical\\"
      }
    },
    \\"pagerduty_service_integration\\": {
      \\"test-pagerduty_TfTokenTOKEN60-critical_67C77122\\": {
        \\"depends_on\\": [
          \\"pagerduty_service.test-pagerduty_pagerduty-critical_3EB714BD\\"
        ],
        \\"name\\": \\"\${data.pagerduty_vendor.test-pagerduty_sentry_896D6C2C.name}\\",
        \\"service\\": \\"\${pagerduty_service.test-pagerduty_pagerduty-critical_3EB714BD.id}\\",
        \\"vendor\\": \\"\${data.pagerduty_vendor.test-pagerduty_sentry_896D6C2C.id}\\"
      },
      \\"test-pagerduty_TfTokenTOKEN64-non-critical_41F88670\\": {
        \\"depends_on\\": [
          \\"pagerduty_service.test-pagerduty_pagerduty-non-critical_BBC21A2B\\"
        ],
        \\"name\\": \\"\${data.pagerduty_vendor.test-pagerduty_sentry_896D6C2C.name}\\",
        \\"service\\": \\"\${pagerduty_service.test-pagerduty_pagerduty-non-critical_BBC21A2B.id}\\",
        \\"vendor\\": \\"\${data.pagerduty_vendor.test-pagerduty_sentry_896D6C2C.id}\\"
      },
      \\"test-pagerduty_TfTokenTOKEN68-critical_2A2BDDE8\\": {
        \\"depends_on\\": [
          \\"pagerduty_service.test-pagerduty_pagerduty-critical_3EB714BD\\"
        ],
        \\"name\\": \\"\${data.pagerduty_vendor.test-pagerduty_cloudwatch_8824B7B3.name}\\",
        \\"service\\": \\"\${pagerduty_service.test-pagerduty_pagerduty-critical_3EB714BD.id}\\",
        \\"vendor\\": \\"\${data.pagerduty_vendor.test-pagerduty_cloudwatch_8824B7B3.id}\\"
      },
      \\"test-pagerduty_TfTokenTOKEN72-non-critical_EE9383C7\\": {
        \\"depends_on\\": [
          \\"pagerduty_service.test-pagerduty_pagerduty-non-critical_BBC21A2B\\"
        ],
        \\"name\\": \\"\${data.pagerduty_vendor.test-pagerduty_cloudwatch_8824B7B3.name}\\",
        \\"service\\": \\"\${pagerduty_service.test-pagerduty_pagerduty-non-critical_BBC21A2B.id}\\",
        \\"vendor\\": \\"\${data.pagerduty_vendor.test-pagerduty_cloudwatch_8824B7B3.id}\\"
      }
    }
  }
}"
`;
